--- a/2ºTrimestre/Campos de formulario/index.html
+++ b/2ºTrimestre/Campos de formulario/index.html
@@ -7,7 +7,20 @@
    
 </head>
 <body>
-    <input type="text">
+    <input type="text" placeholder="Digite o seu nome...">
+    <br>
     <input type="button" placeholder="aaaaa">
+    <br>
+    <select>
+        <option>Opção 1</option>
+        <option>Opção 2</option>
+        <option>Opção 3</option>
+    </select>
+    <br>
+    <input type="radio" name="opcoes"><label>Opção 1</label><br>
+    <input type="radio" name="opcoes"><label>Opção 2</label><br>
+    <input type="radio" name="opcoes"><label>Opção 3</label><br>
+    
+    <button>Salvar</button>
 </body>
 </html>
